# Flutter-Ever-Crypto

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cargokit.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_ever_crypto_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_ever_crypto.podspec
ios/Classes/: flutter_ever_crypto.c
lib/: flutter_ever_crypto.dart
linux/: CMakeLists.txt
macos/: flutter_ever_crypto.podspec
rust/: Cargo.toml
rust/src/: lib.rs
src/: CMakeLists.txt  flutter_ever_crypto.c  flutter_ever_crypto.h
windows/: CMakeLists.txt
